# slvm

./: Cargo.toml
bridge_macros/src/: lib.rs
builtins/: Cargo.toml
builtins/src/: lib.rs  print.rs  string.rs  types.rs
compile_state/: Cargo.toml
compile_state/src/: state.rs
compiler/: Cargo.toml
compiler/src/: backquote.rs  compile.rs
compiler/src/compile/: compile_let.rs  destructure.rs
core_types/: Cargo.toml
core_types/src/: chunk.rs  handle.rs  heap.rs  interner.rs  lib.rs  value.rs
core_types/src/heap/: storage.rs
slosh/: Cargo.toml
slosh/src/: main.rs
vm/: Cargo.toml
vm/src/: interner.rs  lib.rs  value.rs  vm.rs
vm/src/vm/: call.rs  call_collection.rs  exec_loop.rs  storage.rs
