[workspace]

resolver = "2"

members = [
    "slosh",
    "compiler",
    "vm",
    "builtins",
    "compile_state",
    "shell",
    "bridge_macros",
    "core_types",
]

[profile.release]
lto = true
#codegen-units = 1
#opt-level = 'z'
debug = true
#panic = "abort"

[workspace.dependencies]
core_types = { path = "./core_types" }
